--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -498,10 +498,10 @@ jobs:
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             fi
-      #       export STACKS=($(aws cloudformation list-stacks \
+      ##       export STACKS=($(aws cloudformation list-stacks \
       #       --query "StackSummaries[*].StackName" \
       #       --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-      #       echo Stack names: "${STACKS[@]}"
+      #       echo Stack names: "${STACKS[@]}"  
       #       export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
       #       echo Old Workflow ID: $OldWorkflowID
       
