--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -487,7 +487,7 @@ jobs:
           name: Get old stack workflow id
           command: |
             export STACKS=($(aws cloudformation list-stacks \
-                --query "StackSummaries[*].StackName" \\
+                --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo Stack names: "${STACKS[@]}"
             export OldWorkflowID=$(curl --insecure https://kvdb.io//old_workflow_id)
