--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -23,7 +23,7 @@
       become: true 
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
 
-  # Get the environment variables from CircleCI and add to the EC2 instance
+  # Get the environment variables from CircleCI and add to the EC2 instancee
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
@@ -37,4 +37,4 @@
 
   roles:
     - configure-server
-    #- configure-prometheus-node-exporter
+    - configure-prometheus-node-exporter
