--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -434,6 +434,8 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - install_awscli
       - install_nodejs
       - run:
